# Clock-Recognition-And-Manipulation-DL

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  SOFAR.md  analog-clock-pipeline.ipynb  analog_sketch_creator.py  digital-clock-pipeline.ipynb  full-pipeline.ipynb  pipeline.ipynb  pipelineV1.0.ipynb  pipelineV2.0.ipynb  pipeline_runners.py  pyproject.toml  requirements.txt  retrain_and_evaluate.sh
ac_hands_ft/dataset/: data.yaml  filename_mapping.csv
ac_hands_ft/dataset/labels/: test.cache  train.cache  val.cache
ac_hands_ft/dataset/labels/test/: test_00002.txt  test_00004.txt  test_00006.txt  test_00007.txt  test_00008.txt  test_00009.txt  test_00012.txt  test_00013.txt  test_00014.txt  test_00015.txt  test_00019.txt  test_00022.txt  test_00025.txt  test_00026.txt
ac_hands_ft/dataset/labels/train/: train_00000.txt  train_00001.txt  train_00003.txt  train_00004.txt  train_00005.txt  train_00006.txt  train_00007.txt  train_00010.txt  train_00011.txt  train_00012.txt  train_00013.txt  train_00014.txt  train_00015.txt  train_00016.txt  train_00017.txt  train_00019.txt  train_00022.txt  train_00023.txt  train_00026.txt  train_00028.txt  (+52 more)
ac_hands_ft/runs/yolo_hands_seconds_finetune_from_internet/: args.yaml  results.csv
ac_hands_ft_cropped/dataset/: data.yaml  filename_mapping.csv
ac_hands_ft_cropped/dataset/labels/: test.cache  train.cache  val.cache
ac_hands_ft_cropped/runs/yolo_hands_seconds_finetune_from_internet/: args.yaml  results.csv
analog clock/dataset_generator/: augmentations.py  clock_renderer.py  config.py
analog-clock/: roadmap.md
analog-clock/cGAN/: cGAN-model-hands-segments.ipynb
analog-clock/cGAN/dataset_generator/: config.py
analog-clock/cGAN/remove_hands/: cGAN-model-hands-segments.ipynb  inpaint_gen_100.pth  inpaint_gen_20.pth  inpaint_gen_60.pth
analog-clock/dataset_generator/: sketch_generator.py
analog-clock/detetct_hands/: clock_orientation_classifier.ipynb  kde.ipynb  keypoint_detection.ipynb  semantic_segmentation.ipynb
analog_clock/: pipeline_utils.py
analog_clock/GAN/: retrain.py
analog_clock/GAN/inpainting/: README.md  generator-model.py  generator_model.py  inpainting_GAN_model.ipynb
analog_clock/GAN/sketch/: README.md  generator_model.py
analog_clock/docs/: roadmap.md
analog_clock/models/clock_bbox_detector_yolo/: dataset.yaml  fine_tuning_framework.py  yolo.ipynb
analog_clock/models/hands_removal_cgan/: cGAN-model-hands-segments.ipynb  inpaint_gen_100.pth
analog_clock/models/sketch_generator_cgan/: generator_100.pth
analog_clock/shared/: __init__.py  asset_manager.py  augmentations.py  clock_renderer.py  config.py  procedural_generator.py  sketch_generator.py
analog_clock/test_images/: test_image14.ann.json  test_image15.ann.json
analog_clock/time_recognition_cnn/: README.md  clock_hand_cnn_best.pth  dataset_generator.py  model.py  train.py
analog_clock/vit_clock_gen/: README.md  __init__.py  dataset_generator.py  model.py  train.py  train_gpu.sh
analog_clock/yolo_detetct_hands/: fine_tune_from_internet.ipynb
analog_clock/yolo_detetct_hands/crop_with_clock_detector/: README.md  crop_and_remap_annotations.py
analog_clock/yolo_detetct_hands/tagging_platform/: README.md  annotation_logic.py  annotator.py  convert_jfif_to_jpg.py  requirements.txt  yolo_export.py
digital-clock/svhn/: resnet_svhn.py  svhn-cnn-model.ipynb
digital-clock/yolo/: yolo.ipynb
digital-clock/yolo/dataset_creator/: dataset_generator.py  image_generator.py
digital_clock/models/hh_mm_bbox_detector_yolo/: fine_tuning_framework.py
digital_clock/models/hh_mm_digit_reader_cnn/: 7seg_svhn_dataset_gen.py  svhn-cnn-model.ipynb  svhn-cnn-model.py
digital_clock/notebooks/: digital_clock_pipeline.ipynb
digital_clock/svhn_digit_recognition_cnn/: README.md  svhn_cnn.pth  svhn_cnn_model.ipynb
digital_clock/yolo_detect_hh_mm/: yolo_image_gen.py
digital_clock/yolo_detect_hh_mm/dataset_creator/: font_manager.py
general_notebooks/: pipeline_v1_0.ipynb
scripts/: make_sample_inputs.py
tests/: test_models.py  test_pipeline_utils.py  test_shared_config.py
(+235 files in other folders)
