[project]
name = "clock-recognition-and-manipulation"
version = "0.1.0"
description = "End-to-end DL pipeline: digital time recognition to generative analog clock manipulation"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Deep learning
    "torch",
    "torchvision",
    "ultralytics",

    # Image processing
    "opencv-python",
    "opencv-contrib-python",
    "Pillow",
    "albumentations>=1.4.15",
    "scikit-image",
    "imageio",

    # Data & science
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "h5py",

    # Utilities
    "tqdm",
    "requests",
    "PyYAML",
    "psutil",

    # Dataset access
    "datasets",
    "kagglehub",
    "kaggle",

    # Notebook support
    "jupyter",
    "ipykernel",
    "nbconvert",

    # Monitoring
    "tensorboard",
]

[project.optional-dependencies]
tagging = [
    "PyQt5>=5.15.0",
]

# NOTE — CUDA PyTorch:
# The default `torch` from PyPI is CPU-only.
# For NVIDIA GPU training, install the CUDA build:
#   pip install torch torchvision --index-url https://download.pytorch.org/whl/cu124
# Or with uv:
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu124
# The retrain_and_evaluate.sh script handles this automatically.

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest",
    "ruff",
]
