[project]
name = "clock-recognition-and-manipulation"
version = "0.1.0"
description = "End-to-end DL pipeline: digital time recognition to generative analog clock manipulation"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    # Deep learning
    "torch",
    "torchvision",
    "timm>=1.0.0",
    "ultralytics",

    # Image processing
    "opencv-python",
    "opencv-contrib-python",
    "Pillow",
    "albumentations>=1.4.15",
    "scikit-image",
    "imageio",

    # Data & science
    "numpy",
    "scipy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "h5py",

    # Utilities
    "tqdm",
    "requests",
    "PyYAML",
    "psutil",

    # Dataset access
    "datasets",
    "kagglehub",
    "kaggle",

    # Notebook support
    "jupyter",
    "ipykernel",
    "nbconvert",

    # Monitoring
    "tensorboard",
]

[project.optional-dependencies]
tagging = [
    "PyQt5>=5.15.0",
]

# ── CUDA PyTorch (uv source override) ────────────────────────────────────────
# On Linux (GPU training machines) uv pulls torch/torchvision from the PyTorch
# CUDA 12.1 index so that `uv sync` / `uv run` never silently revert to the
# CPU-only wheels from PyPI.  Mac (Darwin) keeps the default PyPI wheels.
[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]

[[tool.uv.indexes]]
name = "pytorch-cu121"
url  = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest",
    "ruff",
]
